Add TemplateBody
